@@ -13,14 +13,13 @@ import javax.jdo.JDOObjectNotFoundException;
 import javax.jdo.PersistenceManager;
 import javax.jdo.Query;
 
-import com.google.appengine.api.datastore.Key;
-import com.google.appengine.api.datastore.KeyFactory;
-
 import teammates.client.remoteapi.RemoteApiClient;
 import teammates.storage.entity.Account;
 import teammates.storage.entity.Instructor;
 import teammates.storage.entity.Student;
 
+import com.google.appengine.api.datastore.Key;
+import com.google.appengine.api.datastore.KeyFactory;
 
 /**
  * Generate list of institutes and number of users per institute.
@@ -32,11 +31,11 @@ public class StatisticsPerInstitute extends RemoteApiClient {
             .getPersistenceManagerFactory("transactions-optional")
             .getPersistenceManager();
     
-    private int iterationCounter;
-    
     private static final int INSTRUCTOR_INDEX = 0;
     private static final int STUDENT_INDEX = 1;
     private static final String UNKNOWN_INSTITUTE = "Unknown Institute";
+    
+    private int iterationCounter;
     
     private HashMap<String, String> courseIdToInstituteMap = new HashMap<String, String>();
     
@@ -44,8 +43,8 @@ public class StatisticsPerInstitute extends RemoteApiClient {
         StatisticsPerInstitute statistics = new StatisticsPerInstitute();
         statistics.doOperationRemotely();
     }
-    
-    
+
+    @Override
     @SuppressWarnings("unchecked")
     protected void doOperation() {
         
@@ -58,8 +57,8 @@ public class StatisticsPerInstitute extends RemoteApiClient {
         StatsBundle statsBundle = generateStatsPerInstitute(allStudents, allInstructors);
         List<InstituteStats> statsPerInstituteList = statsBundle.instituteStatsList;
         
-        String statsForUniqueStudentEmail =  generateUniqueStudentEmailStatsInWholeSystem(statsBundle.numOfAllStudentEmails,
-                                                                                          statsBundle.numOfUniqueStudentEmails);
+        String statsForUniqueStudentEmail = generateUniqueStudentEmailStatsInWholeSystem(statsBundle.numOfAllStudentEmails,
+                                                                                         statsBundle.numOfUniqueStudentEmails);
         String statsForUniqueInstructorEmail = generateUniqueInstructorEmailStatsInWholeSystem(statsBundle.numOfAllInstructorEmail,
                                                                                                statsBundle.numOfUniqueInstructorEmails);
         
@@ -70,35 +69,31 @@ public class StatisticsPerInstitute extends RemoteApiClient {
         System.out.println("\n\n" + "***************************************************" + "\n\n");
         System.out.println(statsForUniqueInstructorEmail);
     }
-    
 
     private String generateUniqueInstructorEmailStatsInWholeSystem(int totalCountOfEmails, int totalCountOfUniqueEmails) {
-       
-        
+
         String result = "===============Unique Instructor Emails===============\n"
                         + "Format=> Total Unique Emails [Total Emails]\n"
                         + "===================================================\n"
                         + totalCountOfUniqueEmails + " [ " + totalCountOfEmails + " ]\n";
         return result;
     }
-    
-    
+
     private boolean isTestingInstructorData(Instructor instructor) {
         boolean isTestingData = false;
         
         if (instructor.getEmail() != null && instructor.getEmail().toLowerCase().endsWith(".tmt")) {
             isTestingData = true;
-        }       
+        }
         
         String instituteForInstructor = getInstituteForInstructor(instructor);
         if (instituteForInstructor == null || instituteForInstructor.contains("TEAMMATES Test Institute")) {
             isTestingData = true;
-        } 
+        }
         
         return isTestingData;
     }
-    
-    
+
     private String generateUniqueStudentEmailStatsInWholeSystem(int totalCountOfEmails, int totalCountOfUniqueEmails) {
        
         String result = "===============Unique Student Emails===============\n"
@@ -113,11 +108,11 @@ public class StatisticsPerInstitute extends RemoteApiClient {
         
         if (student.getEmail().toLowerCase().endsWith(".tmt")) {
             isTestingData = true;
-        }       
+        }
         
         if (getInstituteForStudent(student).contains("TEAMMATES Test Institute")) {
             isTestingData = true;
-        } 
+        }
         
         return isTestingData;
     }
@@ -132,26 +127,23 @@ public class StatisticsPerInstitute extends RemoteApiClient {
         
         for (Instructor instructor : allInstructors) {
             
-            if (isTestingInstructorData(instructor) || instructor.getEmail() == null) {               
+            if (isTestingInstructorData(instructor) || instructor.getEmail() == null) {
                 continue;
             }
             
             String institute = getInstituteForInstructor(instructor);
             
-            if (!institutes.containsKey(institute)) {               
+            if (!institutes.containsKey(institute)) {
                 institutes.put(institute, new HashMap<Integer, HashSet<String>>());
                 institutes.get(institute).put(INSTRUCTOR_INDEX, new HashSet<String>());
                 institutes.get(institute).put(STUDENT_INDEX, new HashSet<String>());
             }
-                institutes.get(institute).get(INSTRUCTOR_INDEX).add(instructor.getEmail().toLowerCase());
-                allInstructorEmailSet.add(instructor.getEmail().toLowerCase());
-                instructorEmailCounter++;
-                updateProgressIndicator();
+            institutes.get(institute).get(INSTRUCTOR_INDEX).add(instructor.getEmail().toLowerCase());
+            allInstructorEmailSet.add(instructor.getEmail().toLowerCase());
+            instructorEmailCounter++;
+            updateProgressIndicator();
         }
 
-        
-        
-        
         for (Student student : allStudents) {
             
             if (isTestingStudentData(student) || student.getEmail() == null) {
@@ -160,7 +152,7 @@ public class StatisticsPerInstitute extends RemoteApiClient {
             
             String institute = getInstituteForStudent(student);
             
-            if (!institutes.containsKey(institute)) {               
+            if (!institutes.containsKey(institute)) {
                 institutes.put(institute, new HashMap<Integer, HashSet<String>>());
                 
                 institutes.get(institute).put(INSTRUCTOR_INDEX, new HashSet<String>());
@@ -168,7 +160,7 @@ public class StatisticsPerInstitute extends RemoteApiClient {
             }
             
             institutes.get(institute).get(STUDENT_INDEX).add(student.getEmail().toLowerCase());
-            allStudentEmailSet.add(student.getEmail().toLowerCase());  
+            allStudentEmailSet.add(student.getEmail().toLowerCase());
             studentEmailCounter++;
             updateProgressIndicator();
         }
@@ -189,21 +181,16 @@ public class StatisticsPerInstitute extends RemoteApiClient {
     @SuppressWarnings("unchecked")
     private String getInstituteForStudent(Student student) {
         
-        String institute = courseIdToInstituteMap.get(student.getCourseId());
-        
-        if (institute != null) {
-            return institute;
-        } else {
-            institute = UNKNOWN_INSTITUTE;
+        if (courseIdToInstituteMap.containsKey(student.getCourseId())) {
+            return courseIdToInstituteMap.get(student.getCourseId());
         }
-        
-        
+
         Query q = pm.newQuery(Instructor.class);
         q.declareParameters("String courseIdParam");
         q.setFilter("courseId == courseIdParam");
-        List<Instructor> instructorList = (List<Instructor>) q.execute(student.getCourseId());        
+        List<Instructor> instructorList = (List<Instructor>) q.execute(student.getCourseId());
         
-        institute = getInstituteForInstructors(instructorList);
+        String institute = getInstituteForInstructors(instructorList);
         
         courseIdToInstituteMap.put(student.getCourseId(), institute);
         
@@ -228,23 +215,18 @@ public class StatisticsPerInstitute extends RemoteApiClient {
     }
     
     private String getInstituteForInstructor(Instructor instructor) {
-        
-        String institute = null;
-        
         if (instructor.getGoogleId() == null) {
-            return institute;
+            return null;
         }
         
         Account account = getAccountEntity(instructor.getGoogleId());
         if (account != null) {
             return account.getInstitute();
-            
-        } else {
-            return institute;
         }
+        
+        return null;
     }
-    
-    
+
     private Account getAccountEntity(String googleId) {
         
         try {
@@ -253,18 +235,15 @@ public class StatisticsPerInstitute extends RemoteApiClient {
             
             if (JDOHelper.isDeleted(account)) {
                 return null;
-            } 
+            }
             
             return account;
             
-        } catch (IllegalArgumentException iae) {
-            return null;            
-        } catch (JDOObjectNotFoundException je) {
+        } catch (IllegalArgumentException | JDOObjectNotFoundException e) {
             return null;
         }
     }
-    
-    
+
     private void print(List<InstituteStats> statList) {
         System.out.println("===============Stats Per Institute=================");
         System.out.println("Format=> Instructors + Students = Total [Institute]");
@@ -276,10 +255,10 @@ public class StatisticsPerInstitute extends RemoteApiClient {
             int numInstructors = stats.instructorTotal;
             int numStudents = stats.studentTotal;
             int total = numInstructors + numStudents;
-            runningTotal += total; 
+            runningTotal += total;
             System.out.println(
-                    "[" + i + "]" + numInstructors + " + " + numStudents + "=" 
-                            + total    + "{" + runningTotal + "}\t[" + stats.name + "]");
+                    "[" + i + "]" + numInstructors + " + " + numStudents + "="
+                            + total + "{" + runningTotal + "}\t[" + stats.name + "]");
         }
         
     }
@@ -299,17 +278,18 @@ public class StatisticsPerInstitute extends RemoteApiClient {
     
     private void sortByTotalStudentsDescending(List<InstituteStats> list) {
         Collections.sort(list, new Comparator<InstituteStats>() {
+            @Override
             public int compare(InstituteStats inst1, InstituteStats inst2) {
                 //the two objects are swapped, to sort in descending order
-                return new Integer(inst2.studentTotal).compareTo(new Integer(inst1.studentTotal));
+                return Integer.valueOf(inst2.studentTotal).compareTo(Integer.valueOf(inst1.studentTotal));
             }
         });
     }
     
     private void updateProgressIndicator() {
-        iterationCounter++;       
-        if (iterationCounter % 1000 == 0) {           
-            System.out.print("------------------  iterations count:" + iterationCounter + "  ------------------------\n");
+        iterationCounter++;
+        if (iterationCounter % 1000 == 0) {
+            System.out.print("------------------ iterations count:" + iterationCounter + " ------------------------\n");
         }
     }
     
