@@ -13,9 +13,11 @@ import teammates.common.exception.NullPostParameterException;
  * 
  * @see Assert
  */
-public class Assumption {
+public final class Assumption {
 
-    protected Assumption() {
+    private Assumption() {
+        // utility class
+        // Intentional private constructor to prevent instantiation.
     }
 
     /**
@@ -167,7 +169,7 @@ public class Assumption {
      * is thrown with the given message.
      */
     public static void assertEquals(String message, long expected, long actual) {
-        assertEquals(message, new Long(expected), new Long(actual));
+        assertEquals(message, Long.valueOf(expected), Long.valueOf(actual));
     }
 
     /**
@@ -199,7 +201,7 @@ public class Assumption {
      * is thrown with the given message.
      */
     public static void assertEquals(String message, byte expected, byte actual) {
-        assertEquals(message, new Byte(expected), new Byte(actual));
+        assertEquals(message, Byte.valueOf(expected), Byte.valueOf(actual));
     }
 
     /**
@@ -229,7 +231,7 @@ public class Assumption {
      * AssertionFailedError is thrown with the given message.
      */
     public static void assertEquals(String message, short expected, short actual) {
-        assertEquals(message, new Short(expected), new Short(actual));
+        assertEquals(message, Short.valueOf(expected), Short.valueOf(actual));
     }
 
     /**
@@ -244,7 +246,7 @@ public class Assumption {
      * is thrown with the given message.
      */
     public static void assertEquals(String message, int expected, int actual) {
-        assertEquals(message, new Integer(expected), new Integer(actual));
+        assertEquals(message, Integer.valueOf(expected), Integer.valueOf(actual));
     }
 
     /**
@@ -288,6 +290,9 @@ public class Assumption {
      * Asserts that two objects refer to the same object. If they are not an
      * AssertionFailedError is thrown with the given message.
      */
+    @SuppressWarnings("PMD.CompareObjectsWithEquals")
+    // PMD.CompareObjectsWithEquals is suppressed as assertSame are checking if
+    // the expected and actual are the same objects (not just equal to each other)
     public static void assertSame(String message, Object expected, Object actual) {
         if (expected == actual) {
             return;
@@ -300,6 +305,9 @@ public class Assumption {
      * Asserts that two objects refer to the same object. If they are not the
      * same an AssertionFailedError is thrown.
      */
+    @SuppressWarnings("PMD.CompareObjectsWithEquals")
+    // PMD.CompareObjectsWithEquals is suppressed as assertSame are checking if
+    // the expected and actual are the same objects (not just equal to each other)
     public static void assertSame(Object expected, Object actual) {
         assertSame(null, expected, actual);
     }
@@ -309,6 +317,9 @@ public class Assumption {
      * refer to the same object an AssertionFailedError is thrown with the given
      * message.
      */
+    @SuppressWarnings("PMD.CompareObjectsWithEquals")
+    // PMD.CompareObjectsWithEquals is suppressed as assertNotSame is checking if
+    // the expected and actual are the different objects (not just equal to each other)
     public static void assertNotSame(String message, Object expected,
             Object actual) {
         if (expected == actual) {
@@ -353,11 +364,10 @@ public class Assumption {
         }
         return formatted + "expected:<" + expected + "> but was:<" + actual + ">";
     }
-    
-    
+
     public static void assertPostParamNotNull(String parameterName, String postParameter) {
         if (postParameter == null) {
-            throw new NullPostParameterException(String.format(Const.StatusCodes.NULL_POST_PARAMETER, 
+            throw new NullPostParameterException(String.format(Const.StatusCodes.NULL_POST_PARAMETER,
                     parameterName));
         }
     }
